Use LCD code only if CONFIG_ONBOARD_DISPLAY set

--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -128,6 +128,10 @@ ifeq ($(CONFIG_RTC_SOFTWARE),y)
   SRC += rtc.c avr/softrtc.c
 endif
 
+ifeq ($(CONFIG_ONBOARD_DISPLAY),y)
+  SRC += avr/lcd.c
+endif
+
 # Optimization level, can be [0, 1, 2, 3, s].
 #     0 = turn off optimization. s = optimize for size.
 #     (Note: 3 is not always the best optimization level. See avr-libc FAQ.)
