Add IFC support for old petSD and the new pet microSD
The code tries to read the die revision of the ethernet
interface chip ENC28J60. If it fails, it assumes that this chip
is not present and that IFC is connected to a port pin that would
have been used as ethernet interrupt otherwise.

Having neither ethernet chip nor IFC patch on the old petSD
does not harm. It will simply ignore IFC as it always did.

IFC is connected to port PD3 on the pet microSD by default.
Have a look at http://petsd.net for instructions how to patch
in two wires to make IFC usable for the old petSD as well.

--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -132,6 +132,12 @@ ifeq ($(CONFIG_ONBOARD_DISPLAY),y)
   SRC += avr/lcd.c
 endif
 
+# petSD requires ENC28J60 detection
+# If it is not available, the then unused ETINT pin is used for IFC
+ifeq ($(CONFIG_HARDWARE_VARIANT),8)
+  SRC += enc28j60.c
+endif
+
 # Optimization level, can be [0, 1, 2, 3, s].
 #     0 = turn off optimization. s = optimize for size.
 #     (Note: 3 is not always the best optimization level. See avr-libc FAQ.)
