Enhanced diagnose code for petSD+
petSD+
=====

Hold the PREV button during reset/power on to enter diagnostic
mode. ADC: raw value of the analog/digital converter, should
change if you press one or several buttons. CD=card detect,
WP=write protect
L, H and E are the values of the AVR low, high and extended
fuses. If those match the intended settings, they’re appended by
OK or BAD if otherwise. Both LEDs are flashing.
Reset or power-cycle the device to exit from diagnostic mode

All other devices
==========
Test card detect and write protect switches as usual, refer the
README for details

--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -50,7 +50,7 @@ TARGET = $(OBJDIR)/NODISKEMU
 
 # List C source files here. (C dependencies are automatically generated.)
 SRC  = buffers.c fatops.c fileops.c main.c errormsg.c
-SRC += doscmd.c ff.c d64ops.c diskchange.c
+SRC += doscmd.c ff.c d64ops.c diskchange.c diagnose.c
 SRC += eeprom-conf.c parser.c utils.c led.c diskio.c
 SRC += timer.c $(CONFIG_ARCH)/arch-timer.c $(CONFIG_ARCH)/spi.c
 SRC += $(CONFIG_ARCH)/system.c
@@ -136,6 +136,11 @@ endif
 # If it is not available, the then unused ETINT pin is used for IFC
 ifeq ($(CONFIG_HARDWARE_VARIANT),8)
   SRC += enc28j60.c
+endif
+
+# petSD+ uses analog/digital converter to read the buttons
+ifeq ($(CONFIG_HARDWARE_VARIANT),10)
+  SRC += avr/analogbuttons.c
 endif
 
 # Optimization level, can be [0, 1, 2, 3, s].
