Add splash screen
Display software version and hardware name on startup,
serial number (if available) yet to come

--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -201,6 +201,7 @@ endif
 
 LONGVERSION := -$(CONFIGSUFFIX)
 CDEFS += -DVERSION=\"$(PROGRAMVERSION)\" -DLONGVERSION=\"$(LONGVERSION)\"
+CDEFS += -DHWNAME=\"$(CONFIG_HARDWARE_NAME)\"
 
 
 # Define programs and commands.
