Add Makefile's delete-eeprom target
Handy to test default values

--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -398,6 +398,7 @@ clean:
 	$(Q)$(REMOVE) $(OBJDIR)/make.inc
 	$(Q)$(REMOVE) $(OBJDIR)/asmconfig.h
 	$(Q)$(REMOVE) $(OBJDIR)/*.bin
+	$(Q)$(REMOVE) *.bin
 	$(Q)$(REMOVE) $(LST)
 	$(Q)$(REMOVE) $(CSRC:.c=.s)
 	$(Q)$(REMOVE) $(CSRC:.c=.d)
