--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -85,6 +85,12 @@ ifeq ($(CONFIG_REMOTE_DISPLAY),y)
   NEED_I2C := y
 endif
 
+ifeq ($(CONFIG_DEBUG_MSGS_TO_LCD),y)
+  ifneq ($(CONFIG_UART_DEBUG),y)
+    $(error LCD debug output requires CONFIG_UART_DEBUG enabled as well)
+  endif
+endif
+
 ifeq ($(CONFIG_P00CACHE),y)
   SRC += p00cache.c
 endif
@@ -135,6 +141,15 @@ ifeq ($(CONFIG_HARDWARE_VARIANT),8)
   SRC += enc28j60.c
 endif
 
+# petSD-duo uses a MCP23S17 port expander
+ifeq ($(CONFIG_HARDWARE_VARIANT),11)
+  SRC += mcp23s17.c
+endif
+
+# Slave AVR with graphic LCD display
+ifeq ($(CONFIG_GRAPHIC_DISPLAY),y)
+  NEED_I2C := y
+endif
 # Optimization level, can be [0, 1, 2, 3, s].
 #     0 = turn off optimization. s = optimize for size.
 #     (Note: 3 is not always the best optimization level. See avr-libc FAQ.)
@@ -413,5 +428,5 @@ clean:
 # Listing of phony targets.
 .PHONY : all sizebefore sizeafter gccversion \
 build elf hex eep lss sym coff extcoff \
-clean clean_list program debug gdb-config doxygen
+clean clean_list program load debug gdb-config doxygen
 
