--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -146,10 +146,17 @@ ifeq ($(CONFIG_HARDWARE_VARIANT),11)
   SRC += mcp23s17.c
 endif
 
+# Serial PET/Server Protocol
+ifeq ($(CONFIG_SPSP),y)
+  SRC += spsp.c
+  SRC += devnumbers.c
+endif
+
 # Slave AVR with graphic LCD display
 ifeq ($(CONFIG_GRAPHIC_DISPLAY),y)
   NEED_I2C := y
 endif
+
 # Optimization level, can be [0, 1, 2, 3, s].
 #     0 = turn off optimization. s = optimize for size.
 #     (Note: 3 is not always the best optimization level. See avr-libc FAQ.)
