--- a/scripts/Makefile.main
+++ b/scripts/Makefile.main
@@ -136,6 +136,12 @@ ifeq ($(CONFIG_HARDWARE_VARIANT),8)
   SRC += enc28j60.c
 endif
 
+# petSD+ rev. 2.x boards have a I2C slave for PWM and digital output
+# Include path to shared include file
+ifeq ($(CONFIG_HARDWARE_VARIANT),9)
+  EXTRAINCDIRS += test lcd-i2c-pwm-io
+endif
+
 # Optimization level, can be [0, 1, 2, 3, s].
 #     0 = turn off optimization. s = optimize for size.
 #     (Note: 3 is not always the best optimization level. See avr-libc FAQ.)
